resolve some mobile issue squash
squash

--- a/web/global.css
+++ b/web/global.css
@@ -79,3 +79,9 @@ p {
         padding: 16px;
     }
 }
+
+@media screen and (max-width: 420px) {
+    .hideOnMobile {
+        display: none;
+    }
+}
